[fix] 调整图片、标题

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -40,7 +40,7 @@
             <h2>最安全的云笔记</h1>
             <div class="color-box">云笔记通常用于记录个人账号、密码、日记等敏感信息，私密性要求极高，而中心化云笔记通常由某个公司运营，登录账号和笔记都存储在数据库中，技术和运维人员是可以接触到笔记内容的，安全性完全靠个人道德约束，但人性不可控，也就注定无法保证安全。</div>
             <div class="color-box" style="background-color: #081f37;">DeNotebook的笔记内容基于钱包签名加密，即使获得了笔记内容，没有私钥也是无法解密出内容的，具有极高安全性，可以放心的存储账号密码、私钥等最敏感信息。</div>
-            <img class="img2" style="width:80%;" src="./img/box-safe.jpeg" />
+            <img class="img2" style="width:80%;" src="./img/box-safe.png" />
             <a href="/" class="btn">开始使用</a>
         </div>
         <div class="box1">
@@ -68,7 +68,7 @@
             <h2>AI加持下的写作，让你得心应手</h1>
             <div>支持接入chatGPT,马上变身一个智能写作助手，云笔记立马变成你的写作平台。</div>
             <div class="h20"></div>
-            <img class="img2" src="./img/ai.jpg" />
+            <img class="img2" src="./img/ai.png" />
             <a href="/" class="btn">开始使用</a>
         </div>
     </div>
